--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,12 +2,12 @@
 @import "tailwindcss";
 
 
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 
 .logo {
   height: 6em;
